# cellSymphony

./: .dockerignore  .file-length-exceptions  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile.pi-zero  LICENSE  QWEN.md  README.md  cellSymphony.bat  debug_combined_modifier.js  debug_key_events.js  debug_test.ts  package.json  pnpm-lock.yaml  precise_debug.test.ts  simple_debug.js  simple_debug_test.js  simple_syntax_check.ts  syntax_check.ts  test_combined_logic.js  test_combined_modifier.ts  test_combined_modifier_implementation.ts  test_combined_modifier_simple.ts  test_space_key.js  tsconfig.base.json  understand_test.js  verify_combined_modifier.js  verify_combined_modifier.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: audio_config.rs  audio_config_tests.rs  audio_prep_config.rs  audio_prep_service.rs  audio_prep_service_tests.rs  audio_source.rs  audio_thread.rs  commands.rs  desktop_platform_service.rs  host_adapter.rs  host_adapter_audio_tests.rs  host_adapter_platform_tests.rs  host_adapter_store_tests.rs  host_adapter_tests.rs  lib.rs  main.rs  midi.rs  persistence.rs  runtime_worker.rs  samples.rs  samples_tests.rs  types.rs
apps/desktop/src-tauri/src/audio_config/: sample_decode.rs  voice_stealing.rs
apps/desktop/src-tauri/src/host_adapter/: audio_config_apply.rs  host_adapter_audio.rs  host_adapter_store.rs
apps/desktop/src-tauri/src/runtime_worker/: capture.rs  commands.rs  config.rs  emit.rs  perf.rs  platform_service.rs  queue.rs  requests.rs  shutdown.rs  tests.rs
apps/pi-zero/: Cargo.toml  build.rs
apps/pi-zero/src/: audio.rs  audio_config_parse.rs  audio_config_parse_tests.rs  audio_defaults.rs  audio_error.rs  audio_hotplug.rs  audio_output.rs  audio_priority.rs  audio_stream_health.rs  board_profile.rs  candidate_readiness.rs  device_update.rs  diagnostics.rs  encoder_queue.rs  hardware_fault.rs  hardware_init.rs  hardware_test.rs  hardware_test_noise.rs  host_adapter.rs  host_adapter_construction.rs  host_adapter_midi.rs  host_adapter_store.rs  host_adapter_system_info.rs  host_adapter_tests.rs  host_audio_command.rs  host_audio_prep.rs  host_audio_prep_tests.rs  host_audio_preview_prep.rs  input.rs  main.rs  main_paths.rs  main_runtime_loop.rs  node_runner_process.rs  oled_test.rs  persistence.rs  platform_service.rs  platform_service_test_support.rs  platform_service_worker.rs  recording.rs  render.rs  (+12 more)
apps/pi-zero/src/audio_config_parse/: audio_sample_decode.rs
apps/pi-zero/src/dsp_profile/: engine_event_clone.rs  fx_cases.rs  mod.rs  report.rs  samples.rs  scenario_events.rs  scenarios.rs  telemetry.rs  timing.rs
apps/pi-zero/src/render/: font.rs  footer.rs  hdmi.rs  oled.rs  profile.rs  sleep_leds.rs  tests.rs
apps/pi-zero/src/timing_probe/: live_probe.rs  live_report.rs  probe_options.rs
apps/pi-zero/tests/: metadata_cli.rs
crates/hal/: Cargo.toml
crates/hal/src/: board_profiles.rs  encoder_gpio.rs  i2c_bus.rs  i2s_dac.rs  lib.rs  neokey.rs  neotrellis.rs  oled_ssd1351.rs  pinmap.rs  seesaw_interrupt.rs
crates/playback-runtime/: Cargo.toml
crates/playback-runtime/src/: delay_timing.rs  lib.rs  native_help.rs  native_menu.rs  native_runner.rs  native_runner_tests.rs  preset_name_policy.rs  process_runner.rs  protocol.rs  runtime.rs  runtime_api.rs  runtime_dispatch.rs  runtime_error_tests.rs  runtime_midi.rs  runtime_status.rs  runtime_test_support.rs  runtime_transport_tests.rs  tests.rs  timing_probe.rs  timing_units.rs
crates/playback-runtime/src/native_menu/: binding_behavior.rs  binding_picker.rs  binding_picker_voice.rs  binding_pulses.rs  binding_pulses_axis.rs  binding_sense.rs  binding_sense_axis.rs  binding_tree.rs  bindings.rs  dance.rs  format.rs  format_rows.rs  format_status.rs  format_values.rs  fx.rs  fx_params.rs  help.rs  item_builders.rs  model.rs  model_binding_specs.rs  model_current.rs  model_edit.rs  model_helpers.rs  model_navigation_memory.rs  model_root.rs  model_search.rs  model_snapshot.rs  model_values.rs  options.rs  pulses.rs  pulses_axis.rs  pulses_sections.rs  sample_browser_menu.rs  section_labels.rs  sense.rs  sense_axis.rs  sense_sections.rs  sparks.rs  synth_preset_items.rs  system.rs  (+9 more)
crates/playback-runtime/src/native_menu/tests/: dance.rs  fixture_tests.rs  fixtures.rs  (+7 more)
crates/playback-runtime/src/native_runner/: action_bindings.rs  action_control.rs  algorithm.rs  apply_payload.rs  apply_payload_helpers.rs  apply_payload_instrument_values.rs  apply_payload_instruments.rs  apply_payload_layers.rs  apply_payload_mixer_values.rs  apply_payload_parts.rs  aux_auto_map.rs  aux_auto_map_fx_layouts.rs  aux_auto_map_instrument_layouts.rs  aux_auto_map_layouts.rs  aux_auto_map_overlay.rs  aux_binding_payload_apply.rs  aux_generated_behavior_turn.rs  behavior_config_recomposition.rs  behavior_menu.rs  behavior_menu_actions.rs  behavior_target_menu.rs  binding_payload.rs  binding_specs.rs  clear_patch_state.rs  config.rs  config_schema.rs  config_schema_validation.rs  config_schema_validation_audio.rs  config_schema_validation_layers.rs  config_schema_validation_nested.rs  construction.rs  construction_deferred.rs  construction_engine.rs  dance_control.rs  dance_fx_utils.rs  dance_transpose.rs  dance_trigger_gate.rs  defaults.rs  deferred_flush.rs  delay_fx_timing.rs  (+110 more)
crates/playback-runtime/src/protocol/: audio.rs  messages.rs  platform.rs  status.rs  tests.rs
crates/playback-runtime/src/timing_probe/: timing_probe_report.rs
crates/playback-runtime/tests/: boundary.rs
crates/signalsmith-stretch/: .cargo_vcs_info.json  .gitmodules  Cargo.toml  Cargo.toml.orig  README.md  build.rs
crates/signalsmith-stretch/examples/: stretch.rs  stretch_exact.rs
crates/signalsmith-stretch/signalsmith-linear/: CMakeLists.txt  SUPPORT.txt  linear.h
crates/signalsmith-stretch/signalsmith-linear/platform/: fft-accelerate.h  linear-accelerate.h
crates/signalsmith-stretch/signalsmith-linear/tests/: CMakeLists.txt  Makefile  main.cpp  test-ffts.h  test-linear.h  test-stfts.h
crates/signalsmith-stretch/src/: lib.rs  wrapper.cpp  wrapper.h
(+793 files in other folders)
