[workspace]
members = [
    "crates/platform-core",
    "crates/playback-runtime",
    "crates/realtime-engine",
    "crates/rodio-engine-source",
    "crates/hal",
    "apps/desktop/src-tauri",
    "apps/pi-zero",
    "tools/midi-io-sidecar"
]
resolver = "2"

[patch.crates-io]
signalsmith-stretch = { path = "crates/signalsmith-stretch" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
