[workspace]
members = [
    "crates/platform-core",
    "crates/playback-runtime",
    "crates/realtime-engine",
    "crates/rodio-engine-source",
    "crates/hal",
    "apps/desktop/src-tauri",
    "apps/pi-zero"
]
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev.package.platform-core]
opt-level = 2

[profile.dev.package.playback-runtime]
opt-level = 2

[profile.dev.package.realtime-engine]
opt-level = 3

[profile.dev.package.rodio-engine-source]
opt-level = 3
