[package]
name = "octessera-pi"
version = "0.7.0"
edition = "2021"

[[bin]]
name = "octessera-pi"
path = "src/main.rs"

[dependencies]
octessera-hal = { path = "../../crates/hal" }
platform-core = { path = "../../crates/platform-core" }
playback-runtime = { path = "../../crates/playback-runtime" }
realtime-engine = { path = "../../crates/realtime-engine" }
rodio-engine-source = { path = "../../crates/rodio-engine-source" }
cpal = "0.15"
libc = "0.2"
rodio = "0.20"
midir = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "1.16"

[features]
default = []
hardware-rpi-zero-2w = ["octessera-hal/rpi-zero-2w"]
hardware-pi = ["hardware-rpi-zero-2w"]

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
