[package]
name = "cellsymphony-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
# Pi Zero 2W specific dependencies (feature-gated)
rppal = { version = "0.14", optional = true }
spidev = { version = "0.5", optional = true }
nix = { version = "0.27", features = ["ioctl"], optional = true }
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
i2cdev = { version = "0.6", optional = true }

[features]
default = []
pi-zero = ["dep:rppal", "dep:nix", "dep:spidev", "dep:i2cdev", "dep:libc"]
