[package]
name = "cellsymphony-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
platform-core = { path = "../platform-core" }
# Pi Zero 2W specific dependencies (feature-gated)
rppal = { version = "0.22.1", optional = true }
spidev = { version = "0.5", optional = true }
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
i2cdev = { version = "0.6", optional = true }

[features]
default = []
pi-zero = ["dep:rppal", "dep:spidev", "dep:i2cdev", "dep:libc"]
