[package]
name = "octessera-hal"
version = "0.7.0"
edition = "2021"

[dependencies]
platform-core = { path = "../platform-core" }
# Pi Zero 2W specific dependencies (feature-gated)
rppal = { version = "0.22.1", optional = true }
spidev = { version = "0.5", optional = true }
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
i2cdev = { version = "0.6", optional = true }

[features]
default = []
rpi-zero-2w = ["dep:rppal", "dep:spidev", "dep:i2cdev", "dep:libc"]
pi-zero = ["rpi-zero-2w"]
