[package]
name = "playback-runtime"
version = "0.5.1"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
platform-core = { path = "../platform-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
