[package]
edition = "2021"
name = "signalsmith-stretch"
version = "0.1.3"
authors = ["Colin Marc <hi@colinmarc.com>"]
build = "build.rs"
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "A wrapper for the Signalsmith Stretch timestretch and pitch-shifting algorithm (patched to remove bindgen)"
homepage = "https://github.com/colinmarc/signalsmith-stretch-rs"
documentation = "https://docs.rs/signalsmith-stretch"
readme = "README.md"
license = "MIT"
repository = "https://github.com/colinmarc/signalsmith-stretch-rs"

[lib]
name = "signalsmith_stretch"
path = "src/lib.rs"

[build-dependencies]
cc = "1"
