[package]
name = "cellsymphony-desktop"
version = "0.5.1"
description = "Cell Symphony desktop shell"
authors = ["Cell Symphony"]
edition = "2021"

[lib]
name = "cellsymphony_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
playback-runtime = { path = "../../../crates/playback-runtime" }
realtime-engine = { path = "../../../crates/realtime-engine" }
rodio-engine-source = { path = "../../../crates/rodio-engine-source" }
midir = "0.10"
rodio = "0.20"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0.0", features = [] }
